[gd_scene load_steps=12 format=3 uid="uid://bqe2vdpjmu5ya"]

[ext_resource type="Script" uid="uid://c6qk20o8g1h8v" path="res://TerrainManager.gd" id="1_2x3wv"]
[ext_resource type="Script" uid="uid://b2j5yi736waqf" path="res://Player.gd" id="2_j4b7s"]
[ext_resource type="Script" uid="uid://x4iymjx76r7e" path="res://ThirdPersonCamera.gd" id="3_k8m9p"]
[ext_resource type="PackedScene" uid="uid://345g5m4ejne2" path="res://flesh_cube.glb" id="4_flesh"]
[ext_resource type="Script" uid="uid://6qfbja3a2dj2" path="res://UI.gd" id="5_n8p3m"]
[ext_resource type="Script" uid="uid://cwy4s3i0dw30t" path="res://ExplosionSystem.gd" id="6_t7r4k"]
[ext_resource type="Script" uid="uid://dvxbyyvsofmig" path="res://DayNightCycle.gd" id="7_m5n8x"]
[ext_resource type="Script" uid="uid://feep8nip02ag" path="res://HighScoreManager.gd" id="8_k2l9s"]
[ext_resource type="Script" uid="uid://b8naj3juwtaeo" path="res://BushSpawner.gd" id="9_p5r8t"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(0.8, 0.8, 0.8)

[sub_resource type="Environment" id="Environment_3hj2p"]
ambient_light_color = Color(0.4, 0.4, 0.4, 1)
ambient_light_energy = 0.3
fog_enabled = true
fog_light_color = Color(0.8, 0.9, 1.0, 1)
fog_light_energy = 0.25
fog_sun_scatter = 0.0
fog_density = 0.001
fog_sky_affect = 0.0

[node name="Main" type="Node3D"]

[node name="TerrainManager" type="Node3D" parent="."]
script = ExtResource("1_2x3wv")

[node name="Player" type="RigidBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
script = ExtResource("2_j4b7s")

[node name="FleshCube" parent="Player" instance=ExtResource("4_flesh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("BoxShape3D_1")

[node name="ExplosionSystem" type="Node3D" parent="Player"]
script = ExtResource("6_t7r4k")

[node name="ThirdPersonCamera" type="Node3D" parent="."]
script = ExtResource("3_k8m9p")
distance = 8.0
height_offset = 3.0
follow_speed = 3.0
rotation_speed = 2.0

[node name="Camera3D" type="Camera3D" parent="ThirdPersonCamera"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3, 8)
environment = SubResource("Environment_3hj2p")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
shadow_enabled = true

[node name="DayNightCycle" type="Node3D" parent="."]
script = ExtResource("7_m5n8x")

[node name="HighScoreManager" type="Node" parent="."]
script = ExtResource("8_k2l9s")

[node name="BushSpawner" type="Node3D" parent="."]
script = ExtResource("9_p5r8t")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_n8p3m")

[node name="UIBackground" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -230.0
offset_right = 320.0
offset_bottom = -10.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/UIBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpeedometerContainer" type="VBoxContainer" parent="UI/UIBackground/VBoxContainer"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="UI/UIBackground/VBoxContainer/SpeedometerContainer"]
layout_mode = 2
text = "Speed: 0.0"

[node name="Speedometer" type="ProgressBar" parent="UI/UIBackground/VBoxContainer/SpeedometerContainer"]
layout_mode = 2
max_value = 15.0
show_percentage = false

[node name="HealthContainer" type="VBoxContainer" parent="UI/UIBackground/VBoxContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="UI/UIBackground/VBoxContainer/HealthContainer"]
layout_mode = 2
text = "Health: 100/100"

[node name="HealthBar" type="ProgressBar" parent="UI/UIBackground/VBoxContainer/HealthContainer"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="StressContainer" type="VBoxContainer" parent="UI/UIBackground/VBoxContainer"]
layout_mode = 2

[node name="StressLabel" type="Label" parent="UI/UIBackground/VBoxContainer/StressContainer"]
layout_mode = 2
text = "Stress: 0.0/10"

[node name="StressBar" type="ProgressBar" parent="UI/UIBackground/VBoxContainer/StressContainer"]
layout_mode = 2
max_value = 10.0
show_percentage = false

[node name="LivesContainer" type="VBoxContainer" parent="UI/UIBackground/VBoxContainer"]
layout_mode = 2

[node name="LivesLabel" type="Label" parent="UI/UIBackground/VBoxContainer/LivesContainer"]
layout_mode = 2
text = "Lives: 10/10"

[node name="TimeLabel" type="Label" parent="UI/UIBackground/VBoxContainer"]
layout_mode = 2
text = "12:00 (Noon)"

[node name="DistanceLabel" type="Label" parent="UI/UIBackground/VBoxContainer"]
layout_mode = 2
text = "Distance: 0.0 m"

[node name="ScoreLabel" type="Label" parent="UI/UIBackground/VBoxContainer"]
layout_mode = 2
text = "Score: 0.0 pts"

[node name="FPSLabel" type="Label" parent="UI/UIBackground/VBoxContainer"]
layout_mode = 2
text = "FPS: 60"
